--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
   androidTestImplementation 'com.android.support.test:runner:1.0.1'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-  //Spring animation
+  //transition animation
   compile "com.andkulikov:transitionseverywhere:1.7.8"
 
   //Butterknife
